--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,12 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "openai>=1.86.0",
-    "anthropic>=0.54.0",
     "click>=8.0.0",
-    "google-genai>=1.24.0",
     "jsonpath-ng>=1.7.0",
     "pydantic>=2.0.0",
     "python-dotenv>=1.0.0",
     "rich>=13.0.0",
     "typing-extensions>=4.0.0",
-    "ollama>=0.5.1",
 ]
 
 [project.optional-dependencies]
@@ -25,10 +22,7 @@ test = [
     "pytest-cov>=4.0.0",
     "pre-commit>=4.2.0",
 ]
-evaluation = [
-    "datasets>=3.6.0",
-    "docker>=7.1.0"
-]
+evaluation = ["datasets>=3.6.0", "docker>=7.1.0"]
 
 [project.scripts]
 trae-cli = "trae_agent.cli:main"
@@ -43,9 +37,7 @@ packages = ["trae_agent"]
 [tool.pytest.ini_options]
 minversion = "6.0"
 addopts = "-ra -q --strict-markers"
-testpaths = [
-    "tests",
-]
+testpaths = ["tests"]
 asyncio_mode = "auto"
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
@@ -76,10 +68,4 @@ exclude_lines = [
 line-length = 100
 
 [tool.ruff.lint]
-select = [
-    "B",
-    "SIM",
-    "C4",
-    "E4", "E9", "E7", "F",
-    "I"
-]
+select = ["B", "SIM", "C4", "E4", "E9", "E7", "F", "I"]
