--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "rich>=13.0.0",
     "typing-extensions>=4.0.0",
+    "httpx>=0.28.1",
 ]
 
 [project.optional-dependencies]
